--- a/style.css
+++ b/style.css
@@ -83,8 +83,13 @@ ul {
     list-style-type: none;
 }
 
-body {
+html {
     background-color: var(--background);
+
+}
+
+body {
+    height: 100%;
 }
 
 .container {
@@ -99,6 +104,7 @@ body {
     margin-top: 1em;
     justify-content: space-between;
     align-items: center;
+    padding: .5em 3em;
 }
 
 .logo {
@@ -110,6 +116,7 @@ body {
     font-weight: var(--weight-semiBold);
     animation: textAnimation 3s linear infinite;
     animation-fill-mode: backwards;
+    font-size: clamp(1em, 3vw, 2em);
 }
 
 .tutorial-message {
@@ -231,4 +238,54 @@ input:checked+.slider:before {
                 rgba(237, 186, 100, 0.698));
         background-clip: text;
     }
+}
+
+/* Balma */
+.tutorial {
+    width: 600px;
+    text-align: center;
+    margin: auto;
+}
+
+figure.image {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+}
+
+figure .image img {
+    width: 128px;
+}
+
+.notification {
+    margin-top: 20px !important;
+}
+
+.results {
+    max-height: 500px;
+    overflow-y: scroll;
+}
+
+.title .icon {
+    margin-left: 15px;
+}
+
+.hero {
+    margin-bottom: 20px;
+}
+
+.forms {
+    display: flex;
+    justify-content: space-around;
+}
+
+.dropdown-item {
+    display: flex;
+    align-items: center;
+    height: 60px;
+}
+
+.dropdown-item img {
+    height: 50px;
+    margin-right: 10px;
 }
